# realm-metadata-tool

./: Cargo.toml  README.md
src/: cli.rs  commands.rs  crypto.rs  error.rs  main.rs  manifest.rs  metadata.rs  utils.rs
